# U001

./: CMakeLists.txt  README.md  main.cpp
build_production/: CMakeCache.txt  Makefile  cmake_install.cmake  main.dis  main.elf  main.elf.map  main.hex  main.uf2
build_production/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake  elf2uf2
build_production/elf2uf2/boot_uf2_headers/: Makefile  cmake_install.cmake
build_production/pico-sdk/: Makefile  cmake_install.cmake
build_production/pico-sdk/docs/: Makefile  cmake_install.cmake
build_production/pico-sdk/src/: Makefile  cmake_install.cmake
build_production/pico-sdk/src/common/: Makefile  cmake_install.cmake
build_production/pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
build_production/pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
build_production/pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
build_production/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
build_production/pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
build_production/pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
build_production/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
build_production/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
build_production/pico-sdk/tools/: Makefile  cmake_install.cmake
build_production/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  pioasm
build_test/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
build_test/Testing/Temporary/: CTestCostData.txt
build_test/Unity/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_test/suite_1/: CTestTestfile.cmake  Makefile  cmake_install.cmake  suite_1_app
src/: CMakeLists.txt  main.c
test/: CMakeLists.txt
test/Unity/: CMakeLists.txt
test/suite_1/: CMakeLists.txt
(+136 files in other folders)
